@@ -1,6 +1,7 @@
 
 2006-09-01  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* configure.in: fixed remainder of bug # 1109935
+	* src/options.c,src/gnome_ui.c: fixed bug # 1109451
 
 2006-08-29  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* src/codecs.c: removed fraction fps rates till xvidcap is adapted
